--- a/app/styles/app.scss
+++ b/app/styles/app.scss
@@ -86,7 +86,7 @@ ul {
 }
 
 .Gloss-viewport {
-  width: 98vw;
+  width: 100%;
   height: calc(100vh - 6rem);
   overflow: hidden;
   flex: 2;
@@ -98,7 +98,52 @@ ul {
     height: 100%;
 
     > .liquid-child {
-      margin-bottom: 5vh;
+      height: calc(100% - 3rem);
+      overflow-y: auto;
+
+      > .ui.grid {
+        height: 100%;
+
+        > .row > .ui.link.cards {
+          width: 100%;
+
+          > .card {
+            flex: 1;
+            flex-basis: 32%;
+            max-height: 520px;
+            min-height: 300px !important;
+
+            &:first-child:nth-last-child(2),
+            &:first-child:nth-last-child(2) ~ .card,
+            &:first-child:nth-last-child(3),
+            &:first-child:nth-last-child(3) ~ .card {
+              max-height: 100% !important;
+            }
+
+            @media screen and (max-width: 1024px) {
+              flex-basis: 48%;
+
+              &:first-child:nth-last-child(3),
+              &:first-child:nth-last-child(3) ~ .card {
+                max-height: 85% !important;
+              }
+            }
+          }
+        }
+      }
+    }
+  }
+
+  &.Gloss-viewport--reduced {
+    > .liquid-container > .liquid-child > .ui.grid > .row > .ui.link.cards > .card {
+      @media screen and (max-width: 1024px) {
+        flex-basis: 100%;
+
+        &:first-child:nth-last-child(2),
+        &:first-child:nth-last-child(2) ~ .card {
+          max-height: 85% !important;
+        }
+      }
     }
   }
 
@@ -291,7 +336,6 @@ strong {
 body.ember-application > .ember-view > .liquid-container > .liquid-child {
   > .ui.modal.about,
   > .ui.modal.threat {
-    margin-top: -350px !important;
     max-height: 70vh !important;
     overflow-y: auto !important;
     z-index: 1001 !important;
@@ -299,8 +343,16 @@ body.ember-application > .ember-view > .liquid-container > .liquid-child {
     border-radius: 0 !important;
     border: 2px rgba($secondary, 0.4) solid !important;
 
+    @media screen and (min-width: 1025px) and (min-height: 769px) {
+      margin-top: -350px !important;
+    }
+
     @media screen and (max-width: 1024px) and (max-height: 768px) {
-      margin-top: -300px !important;
+      max-height: 98vh !important;
+      margin: 1vh 1vw !important;
+      top: 0 !important;
+      left: 0 !important;
+      width: 98vw !important;
     }
 
     > .header,
