--- a/app/styles/components/gloss-message.scss
+++ b/app/styles/components/gloss-message.scss
@@ -2,8 +2,8 @@
   position: absolute;
   top: 0;
   left: 0;
-  right: 0;
-  bottom: 0;
+  height: 100vh;
+  width: 100vw;
   z-index: -1;
   background-color: rgba(0,0,0,0.0);
 
