--- a/app/styles/objects/_button.scss
+++ b/app/styles/objects/_button.scss
@@ -10,6 +10,7 @@
   border-bottom: none;
 
   cursor: pointer;
+  user-select: none;
   font-size: 1.5rem;
   text-align: center;
   text-decoration: none;
