--- a/app/templates/components/gloss-threat.hbs
+++ b/app/templates/components/gloss-threat.hbs
@@ -37,8 +37,10 @@
     <p>
       {{#if (and (eq dominantShipType.count 1) (not otherShipCount))}}
         Solo <strong>{{dominantShipType.name}}</strong> pilot
+      {{else if (and dominantShipType dominantShipType.count)}}
+        {{dominantShipType.count}} <strong>{{dominantShipType.name}}{{unless (eq dominantShipType.count 1) 's'}}</strong> {{otherShipCount}}
       {{else}}
-        {{dominantShipType.count}} <strong>{{dominantShipType.name}}{{unless (eq dominantShipType.count 1) 's'}}</strong> {{#if otherShipCount}} and {{otherShipCount}} other{{unless (eq otherShipCount 1) 's'}} {{/if}}
+        {{otherShipCount}}
       {{/if}}
     </p>
 
