--- a/app/styles/app.scss
+++ b/app/styles/app.scss
@@ -334,57 +334,55 @@ strong {
   }
 }
 
-body.ember-application > .ember-view > .liquid-container > .liquid-child {
-  > .ui.modal.about,
-  > .ui.modal.threat {
-    max-height: 70vh !important;
-    overflow-y: auto !important;
-    z-index: 1001 !important;
-    position: fixed !important;
-    border-radius: 0 !important;
-    border: 2px rgba($secondary, 0.4) solid !important;
+.ui.modal.about[data-select="about"],
+.ui.modal.threat[data-select="threat"] {
+  max-height: 70vh !important;
+  overflow-y: auto !important;
+  z-index: 1001 !important;
+  position: fixed !important;
+  border-radius: 0 !important;
+  border: 2px rgba($secondary, 0.4) solid !important;
 
-    @media screen and (min-width: 1025px) and (min-height: 769px) {
-      margin-top: -350px !important;
-    }
+  @media screen and (min-width: 1025px) and (min-height: 769px) {
+    margin-top: -350px !important;
+  }
 
-    @media screen and (max-width: 1024px) and (max-height: 768px) {
-      max-height: 98vh !important;
-      margin: 1vh 1vw !important;
-      top: 0 !important;
-      left: 0 !important;
-      width: 98vw !important;
-    }
+  @media screen and (max-width: 1024px) and (max-height: 768px) {
+    max-height: 98vh !important;
+    margin: 1vh 1vw !important;
+    top: 0 !important;
+    left: 0 !important;
+    width: 98vw !important;
+  }
 
-    > .header,
-    > .content,
-    > .actions {
-      background: darken($secondary, 35) !important;
-      color: $primary !important;
-      font-weight: 400 !important;
-    }
+  > .header,
+  > .content,
+  > .actions {
+    background: darken($secondary, 35) !important;
+    color: $primary !important;
+    font-weight: 400 !important;
+  }
 
-    > .image.content {
-      padding: 1rem 1.5rem;
+  > .image.content {
+    padding: 1rem 1.5rem;
 
-      > .description {
-        span {
-          margin-right: 0.5rem;
-        }
+    > .description {
+      span {
+        margin-right: 0.5rem;
+      }
 
-        p {
-          margin-top: 1rem;
-        }
+      p {
+        margin-top: 1rem;
       }
     }
+  }
 
-    > .actions {
-      margin: 0 !important;
-      padding: 1rem !important;
+  > .actions {
+    margin: 0 !important;
+    padding: 1rem !important;
 
-      > .column {
-        padding: 0 !important;
-      }
+    > .column {
+      padding: 0 !important;
     }
   }
 }
