--- a/app/styles/components/index.scss
+++ b/app/styles/components/index.scss
@@ -1,4 +1,5 @@
 @import 'gloss-message';
+@import 'gloss-nav-switch';
 @import 'gloss-notification';
 @import 'gloss-shard';
 @import 'gloss-threat';
