--- a/app/templates/navigate.hbs
+++ b/app/templates/navigate.hbs
@@ -1,130 +1,9 @@
-{{#ui-modal name="threat" class="threat inverted" onApprove=(action 'toggleTracking' this)}}
-  <div class="header">
-    {{selectedFaction.name}} <span class="secondary">{{selectedFaction.type}}</span>
-  </div>
+{{gloss-threat-display
+  selectedFaction=selectedFaction
+  selectedFleet=selectedFleet
+  }}
 
-  <div class="image content">
-    <div class="ui tiny image">
-      {{#if selectedFaction}}
-        <img src={{threat-image-url selectedFaction}}>
-      {{/if}}
-    </div>
-
-    <div class="description">
-      <span title="Pilots">
-        <i class="rocket icon"></i>
-        {{selectedFleet.characters.length}} pilot{{unless (eq selectedFleet.characters.length 1) 's'}}
-      </span>
-
-      <span title="Kills">
-        <i class="fire icon" title="Kills"></i>
-        {{selectedFleet.kills.length}} kill{{unless (eq selectedFleet.kills.length 1) 's'}}
-      </span>
-
-      <span title="Threat Level">
-        <i class="exclamation circle icon"></i>
-        Threat level {{threat-level selectedFleet.dangerRatio}}
-      </span>
-
-      <span title="Status">
-        <i class="{{if selectedFleet.isActive 'play' 'stop'}} icon"></i>
-        Fleet {{if selectedFleet.isActive 'is active' 'has expired'}}
-      </span>
-
-      <p>Last kill occurred {{moment-from-now selectedFleet.lastSeen}}</p>
-
-      {{#if latestBattleReport}}
-        <a href="{{latestBattleReport}}" target="_blank" title="View on zKill">Latest battle report <i class="external icon"></i></a>
-      {{/if}}
-    </div>
-  </div>
-
-  <div class="content">
-    <div class="description">
-      <table class="ui celled table inverted" cellpadding="10">
-        <thead>
-          <th>Threat</th>
-          <th>Pilot</th>
-          <th>Ship</th>
-          <th>Corporation</th>
-          <th>Alliance</th>
-        </thead>
-
-        <tbody>
-          {{#each (sort-by 'ship.name:DESC' selectedFleet.characters) as |character|}}
-            <tr class="Gloss-report--character">
-              <td>{{#if (eq character.dangerRatio 0)}}N/A{{else}}{{character.dangerRatio}}%{{/if}}</td>
-              <td><a href="{{zkill-character character}}" target="_blank">{{character.name}}</a></td>
-              <td class="Gloss-report--ship">
-                {{#if character.ship}}
-                  <img src="https://imageserver.eveonline.com/Type/{{character.ship.id}}_32.png" />
-                  {{character.ship.name}}
-                {{else}}
-                  Unknown vessel
-                {{/if}}
-              </td>
-              <td>{{character.corporation.name}}</td>
-              <td>{{if character.alliance character.alliance.name 'None'}}</td>
-            </tr>
-          {{/each}}
-        </tbody>
-      </table>
-    </div>
-  </div>
-
-  <div class="actions ui grid">
-    <div class="two column row no-gutter">
-      <div class="column">
-        <div class="Gloss-button Gloss-button--frameless Gloss-button--small deny">
-          Close
-        </div>
-      </div>
-
-      <div class="column">
-        <div class="Gloss-button Gloss-button--frameless Gloss-button--small positive">
-          <i class="power icon"></i>
-
-          {{if selectedFleetIsTracked 'Stop tracking' 'Track fleet'}}
-        </div>
-      </div>
-    </div>
-  </div>
-{{/ui-modal}}
-
-{{#ui-modal name="about" class="about inverted"}}
-  <div class="header">
-    <div class="Gloss-logo Gloss-logo--centered">GLOSS</div>
-    <h3 class="Gloss-logo Gloss-logo--subtext">Guided List Of Star Systems</h3>
-    <h4 class="Gloss-version">v{{app-version hideSha=true}}</h4>
-  </div>
-
-  <div class="content">
-    <div class="description">
-      <p><a href="https://github.com/dougestey/gloss" target="_blank">GLOSS</a>, <a href="https://github.com/dougestey/arbiter" target="_blank">Arbiter</a> and <a href="https://github.com/dougestey/sentinel" target="_blank">Sentinel</a> are developed by <a href="https://zkillboard.com/character/1907307618/" target="_blank">Chad VanGaalen</a> of <a href="https://zkillboard.com/corporation/98498664/" target="_blank">Straylight Systems</a> and operated out of pocket &amp; free of charge for the benefit of New Eden. <a href="https://github.com/dougestey/gloss/issues" target="_blank">Feedback and suggestions</a> are encouraged. ISK contributions are welcome in-game.</p>
-
-      <p>All components of this software are open sourced on <a href="https://github.com/dougestey/gloss" target="_blank">GitHub.</a></p>
-
-      <p>GLOSS would not be possible without the heaps of support and testing it receives from the wonderful pilots in <a href="https://zkillboard.com/corporation/98498664/" target="_blank">Straylight Systems</a> and <a href="https://zkillboard.com/alliance/99006020/" target="_blank">Who Dares Wins.</a> It would also cease to exist if it weren't for some outstanding individuals who have made invaluable contributions to the EVE Online developer community:</p>
-
-      <ul>
-        <li><a href="https://zkillboard.com/character/1633218082/" target="_blank">Squizz Caphinator</a> of <a href="https://zkillboard.com?ref=gloss.space" target="_blank">zkillboard</a> and <a href="https://github.com/zKillboard/RedisQ" target="_blank">RedisQ</a></li>
-        <li><a href="https://zkillboard.com/character/90926985/" target="_blank">Steve Ronuken</a> of <a href="https://www.fuzzwork.co.uk/?ref=gloss.space" target="_blank">Fuzzwork Enterprises</a></li>
-      </ul>
-
-      <p class="Gloss-copyright">EVE Online and the EVE logo are the registered trademarks of CCP hf. All rights are reserved worldwide. All other trademarks are the property of their respective owners. EVE Online, the EVE logo, EVE and all associated logos and designs are the intellectual property of CCP hf. All artwork, screenshots, characters, vehicles, storylines, world facts or other recognizable features of the intellectual property relating to these trademarks are likewise the intellectual property of CCP hf. CCP hf. has granted permission to gloss.space to use EVE Online and all associated logos and designs for promotional and information purposes on its application but does not endorse, and is not in any way affiliated with, gloss.space. CCP is in no way responsible for the content on or functioning of this application, nor can it be liable for any damage arising from the use of this application.</p>
-    </div>
-  </div>
-
-  <div class="actions ui grid">
-    <div class="one column row no-gutter">
-      <div class="column">
-        <div class="Gloss-button Gloss-button--frameless Gloss-button--small deny">
-          Close
-        </div>
-      </div>
-    </div>
-  </div>
-{{/ui-modal}}
+{{gloss-about-display}}
 
 <div class="Gloss">
   {{gloss-stats
@@ -213,15 +92,13 @@
       align="left"
       }}
 
-    {{gloss-shard
-      value=character.name
-      label=character.ship.name
+    {{gloss-nav-switch
       loaded=loadUiElements
       loadOrder=6
       }}
 
     {{gloss-shard
-      label=(if character.online 'online' 'offline')
+      label=character.name
       loaded=loadUiElements
       loadOrder=7
       align="right"
