--- a/app/templates/components/gloss-stats.hbs
+++ b/app/templates/components/gloss-stats.hbs
@@ -12,7 +12,7 @@
 
     {{gloss-shard
       label="Fleets"
-      value=fleets.length
+      value=fleets
       loaded=loadUiElements
       loadOrder=2
       }}
