--- a/app/templates/navigate.hbs
+++ b/app/templates/navigate.hbs
@@ -1,6 +1,7 @@
 {{gloss-threat-display
   selectedFaction=selectedFaction
   selectedFleet=selectedFleet
+  toggleTracking=(action 'toggleTracking')
   }}
 
 {{gloss-about-display}}
