--- a/app/templates/discover.hbs
+++ b/app/templates/discover.hbs
@@ -1,6 +1,7 @@
 {{gloss-threat-display
   selectedFaction=selectedFaction
   selectedFleet=selectedFleet
+  toggleTracking=(action 'toggleTracking')
   }}
 
 {{gloss-about-display}}
@@ -11,13 +12,20 @@
     context=context
     loadUiElements=loadUiElements
     isConnected=isConnected
+    fleets=fleets
     }}
 
   <div class="ui grid">
-    <div class="one column row no-gutter p0 mt2 mb1">
+    <div class="two columns row no-gutter p0 mt2 mb1">
+      <div class="column">
+        {{#link-to 'discover.map' class='Gloss-button Gloss-button--small'}}
+          Map
+        {{/link-to}}
+      </div>
+
       <div class="column">
         {{#link-to 'discover.fleets' class='Gloss-button Gloss-button--small'}}
-          Fleets <span class="Gloss-button--detail">{{fleets.length}}</span>
+          Fleets <span class="Gloss-button--detail">{{fleets}}</span>
         {{/link-to}}
       </div>
 
