--- a/app/templates/components/gloss-stats.hbs
+++ b/app/templates/components/gloss-stats.hbs
@@ -19,7 +19,7 @@
 
     {{gloss-shard
       label="Kills"
-      value=kills.length
+      value="Not yet"
       loaded=loadUiElements
       loadOrder=3
       }}
