--- a/app/templates/components/gloss-threat-line.hbs
+++ b/app/templates/components/gloss-threat-line.hbs
@@ -1,4 +1,4 @@
-<td>{{fleet.id}}</td>
+{{!-- <td>{{fleet.id}}</td> --}}
 <td>{{fleet.system.region.name}}</td>
 <td>{{fleet.system.name}}</td>
 <td>{{fleet.characters.length}}</td>
