discovery kill pane

--- a/app/templates/components/gloss-stats.hbs
+++ b/app/templates/components/gloss-stats.hbs
@@ -19,7 +19,7 @@
 
     {{gloss-shard
       label="Kills"
-      value="Not yet"
+      value=kills
       loaded=loadUiElements
       loadOrder=3
       }}
