discovery mapping, kills functionality

--- a/app/styles/app.scss
+++ b/app/styles/app.scss
@@ -178,6 +178,10 @@ ul {
   }
 }
 
+.Gloss-navigation {
+  background: linear-gradient(transparent, black, black);
+}
+
 .Gloss-analysis,
 .Gloss-threats,
 .Gloss-report {
