--- a/app/templates/components/gloss-kill-line.hbs
+++ b/app/templates/components/gloss-kill-line.hbs
@@ -3,3 +3,8 @@
 <td>{{kill.positionName}}</td>
 <td>{{kill.victim.name}}</td>
 <td>{{kill.ship.name}}</td>
+<td>
+  <button class="Gloss-button Gloss-button--mini" {{action 'viewAssociatedFleet' bubbles=false}}>
+    View
+  </button>
+</td>
