--- a/app/templates/navigate.hbs
+++ b/app/templates/navigate.hbs
@@ -85,7 +85,7 @@
     </div>
   </div>
 
-  <div class="Gloss-module Gloss-module--x Gloss-flex--end Gloss-fixed Gloss-fixed--bottom">
+  <div class="Gloss-navigation Gloss-module Gloss-module--x Gloss-flex--end Gloss-fixed Gloss-fixed--bottom">
     {{gloss-shard
       label=(app-version hideSha=true)
       loaded=loadUiElements
