--- a/app/templates/discover/map.hbs
+++ b/app/templates/discover/map.hbs
@@ -1,4 +1,7 @@
-{{gloss-map-universe
+{{!-- {{gloss-map-universe
   regions=regions
   systems=systems
-  }}
+  }} --}}
+<div class="ui link cards">
+  <p class="mt2 ml1">Coming soon.</p>
+</div>
