map data for fleets

--- a/app/templates/discover/map.hbs
+++ b/app/templates/discover/map.hbs
@@ -1,7 +1,5 @@
 {{gloss-map-universe
   regions=regions
   systems=systems
+  fleets=fleets
   }}
-{{!-- <div class="ui link cards">
-  <p class="mt2 ml1">Coming soon.</p>
-</div> --}}
