--- a/app/templates/components/gloss-about-display.hbs
+++ b/app/templates/components/gloss-about-display.hbs
@@ -2,7 +2,7 @@
   <div class="header">
     <div class="Gloss-logo Gloss-logo--centered">GLOSS</div>
     <h3 class="Gloss-logo Gloss-logo--subtext">Guided List Of Star Systems</h3>
-    <h4 class="Gloss-version">v{{app-version}}</h4>
+    <h4 class="Gloss-version">v{{app-version hideSha=true}}</h4>
   </div>
 
   <div class="content">
