--- a/app/templates/components/gloss-kill-line.hbs
+++ b/app/templates/components/gloss-kill-line.hbs
@@ -2,7 +2,7 @@
 <td>{{kill.system.name}}</td>
 <td>{{kill.positionName}}</td>
 <td>{{kill.victim.name}}</td>
-<td>{{kill.ship.name}}</td>
+<td class="Gloss-report--ship"><img src="https://imageserver.eveonline.com/Type/{{kill.ship.id}}_64.png" class="Gloss-report--image" />{{kill.ship.name}}</td>
 <td>
   <button class="Gloss-button Gloss-button--mini" {{action 'viewAssociatedFleet' bubbles=false}}>
     View
