--- a/app/styles/app.scss
+++ b/app/styles/app.scss
@@ -71,7 +71,7 @@ ul {
   top: 7.25rem;
   bottom: 2vh;
   overflow: hidden;
-  background: rgba(black, 0.5);
+  background: linear-gradient(90deg, transparent, black);
   opacity: 0;
 
   transition:
@@ -82,6 +82,13 @@ ul {
   &--shown {
     right: 0;
     opacity: 1;
+  }
+
+  &--map {
+    top: 1rem;
+    right: unset;
+    left: 0;
+    background: linear-gradient(90deg, black, transparent);
   }
 }
 
@@ -247,6 +254,14 @@ ul {
 
     img {
       margin-right: 0.75rem;
+
+      &.Gloss-report--image {
+        border-radius: 5rem;
+        margin-right: 1rem;
+        margin-top: -.3rem;
+        margin-bottom: -.3rem;
+        width: 2rem;
+      }
     }
   }
 }
