--- a/app/templates/navigate/constellation.hbs
+++ b/app/templates/navigate/constellation.hbs
@@ -1,6 +1,6 @@
 <div class="ui link cards">
   {{#each (sort-by 'lastSeen:desc' fleets) as |fleet|}}
-    {{gloss-threat
+    {{gloss-threat-card
       model=fleet
       system=system
       context='constellation'
